--- a/jsjs/privatepage02.html
+++ b/jsjs/privatepage02.html
@@ -15,6 +15,9 @@
     <!--    font awesome-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+    <!--    chart.js-->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         .sidebar {
             height: 100vh;
@@ -31,6 +34,7 @@
 
         .sidebar_li {
             padding: 5px;
+            cursor: pointer;
         }
 
         .sidebar_li > a {
@@ -41,7 +45,7 @@
         }
 
         .sidebar_li:hover {
-            background-color: black;
+            background-color: #EF857F;
             transition: all 0.9s;
         }
 
@@ -52,7 +56,7 @@
 </head>
 <body>
 <div class="row">
-    <div class="sidebar col-lg-3 col-md-4 d-none d-xs-block d-md-block" style="background-color: #8DB4D8">
+    <div class="sidebar col-lg-2 col-md-3 d-none d-xs-block d-md-block" style="background-color: #8DB4D8">
         <div class="d-flex flex-column align-items-center text-center">
             <img src="https://post-phinf.pstatic.net/MjAyMDAxMjhfMTM4/MDAxNTgwMTk5MjQ5NDg1.G4i58SRwMBGo9VYMrvxa1oKnzDrBlMB9zzq2Simd3Lwg.IA9GoThxbq1oS_FeeGMQ07CN-GFkDnlVjzjG1PVpbu8g.JPEG/%EC%98%A4%EB%AA%A9%EB%88%88%EC%9D%B4.JPG?type=w1200"
                  alt="Admin"
@@ -71,21 +75,19 @@
         </ul>
     </div>
 
-    <div class="content col-lg-9 col-md-8" style="background-color: #fff">
+    <div class="content col-lg-10 col-md-9">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <div>
-                    <h2 class="ms-3" style="margin-bottom: 0;">DataHub</h2>
-                </div>
-
-
+                <h2 class="ms-3" style="margin-bottom: 0; font-weight: bold">
+                    개인페이지
+                </h2>
                 <button class="btn navbar-toggler fas fa-bars me-2" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
                 </button>
 
 
                 <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
-                     aria-labelledby="offcanvasExampleLabel" style="background-color: #8DB4D8">
+                     style="background-color: #8DB4D8">
                     <div class="offcanvas-header">
                         <!--                        <h5 class="offcanvas-title" id="offcanvasExampleLabel">개인페이지 메뉴</h5>-->
                         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
@@ -104,8 +106,11 @@
                             </div>
                         </div>
                         <form class="d-flex mt-3">
-                            <input class="form-control me-2" type="search" placeholder="검색" aria-label="Search">
-                            <button type="button" class="btn btn-primary">Search</button>
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="검색" aria-label="Username"
+                                       aria-describedby="basic-addon1">
+                                <button type="button" class="btn btn-primary"><i class="fas fa-search"></i></button>
+                            </div>
                         </form>
                         <div class="dropdown mt-3">
                             <ul class="sidebar_ul mt-3">
@@ -117,21 +122,170 @@
                     </div>
                 </div>
 
-                <div class="collapse navbar-collapse d-flex ms-2 justify-content-end d-none"
+                <div class="collapse navbar-collapse d-flex ms-2 me-3 justify-content-end d-none"
                      id="navbarSupportedContent">
-                    <!--                    <h2>페이지1</h2>-->
-                    <form class="d-flex me-2">
-                        <input class="form-control me-2" type="search" placeholder="검색" aria-label="Search">
-                        <button type="button" class="btn btn-primary">Search</button>
+                    <form class="d-flex">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="검색" aria-label="Username"
+                                   aria-describedby="basic-addon1">
+                            <button type="button" class="btn btn-primary"><i class="fas fa-search"></i></button>
+                        </div>
                     </form>
                 </div>
             </div>
         </nav>
-        <div class="ms-3">
-            content
+        <div class="p-3 bg-white">
+            <div class="accordion" id="accordionPanelsStayOpenExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                                aria-controls="panelsStayOpen-collapseOne">
+                            Title1
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                         aria-labelledby="panelsStayOpen-headingOne">
+                        <div class="accordion-body">
+                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="true"
+                                aria-controls="panelsStayOpen-collapseTwo">
+                            Title2
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse show"
+                         aria-labelledby="panelsStayOpen-headingOne">
+                        <div class="accordion-body">
+                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="true"
+                                aria-controls="panelsStayOpen-collapseThree">
+                            Title3
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse show"
+                         aria-labelledby="panelsStayOpen-headingOne">
+                        <div class="accordion-body">
+                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div>
+
+                </div>
+
+            </div>
+            <div class="row mt-5">
+                <div class="col-12 col-md-6">
+
+                    <script>
+                        function create_chart(canvas, label, dataset, type) {
+                            const data = {
+                                labels: label,
+                                datasets: dataset
+                            };
+                            const config = {
+                                type: type,
+                                data: data,
+                                options: {}
+                            };
+                            const myChart = new Chart(
+                                canvas,
+                                config
+                            );
+                        }
+                    </script>
+                    <canvas id="myChart" width="7" height="3"></canvas>
+                    <script>
+                        create_chart(
+                            document.getElementById("myChart"),
+                            [
+                                '1월',
+                                '2월',
+                                '3월',
+                                '4월',
+                                '5월',
+                                '6월',
+                                '7월',
+                                '8월',
+                                '9월',
+                                '10월',
+                                '11월',
+                                '12월',
+                            ],
+                            [{
+                                label: 'My First dataset',
+                                backgroundColor: 'rgb(255, 99, 132)',
+                                borderColor: 'rgb(255, 99, 132)',
+                                data: [2, 10, 5, 2, 20, 30, 40, 2, 10, 5, 2, 20, 30, 45],
+                            }],
+                            "line"
+                        )
+                    </script>
+                </div>
+                <div class="col-12 col-md-6">
+                    <canvas id="myChart02" width="7" height="3"></canvas>
+                    <script>
+                        create_chart(
+                            document.getElementById("myChart02"),
+                            [
+                                '1월',
+                                '2월',
+                                '3월',
+                                '4월',
+                                '5월',
+                                '6월',
+                                '7월',
+                                '8월',
+                                '9월',
+                                '10월',
+                                '11월',
+                                '12월',
+                            ],
+                            [{
+                                label: 'My First dataset',
+                                backgroundColor: 'rgb(255, 99, 132)',
+                                borderColor: 'rgb(255, 99, 132)',
+                                data: [2, 10, 5, 2, 20, 30, 40, 2, 10, 5, 2, 20, 30, 45],
+                            }],
+                            "bar"
+                        )
+                    </script>
+
+                </div>
+
+            </div>
+
         </div>
 
     </div>
 </div>
+
 </body>
 </html>
