fix: 데이터 허브 상세 조회

--- a/hyeonjeong/datahub/view.html
+++ b/hyeonjeong/datahub/view.html
@@ -52,23 +52,23 @@
                 <!-- datahub-view-page-big-title -->
                 <h2 class="mb-3">데이터 허브 상세 조회</h2>
 
-                <h4>API목록</h4>
+                <h4 class="mb-3">API목록</h4>
                 <div class="row mx-auto d-flex justify-content-between">
-                    <div class="col-3 mx-auto border rounded-3 mb-4">
+                    <div class="col-3 rounded-3 mb-4 shadow p-3">
+                        <a href="#" class="">
+                            <div class="fw-bold">API이름</div>
+                            <div>API내용</div>
+                            <div>카테고리</div>
+                        </a>
+                    </div>
+                    <div class="col-3 rounded-3 mb-4 shadow p-3">
                         <a href="#">
                             <div class="fw-bold">API이름</div>
                             <div>API내용</div>
                             <div>카테고리</div>
                         </a>
                     </div>
-                    <div class="col-3 mx-auto border rounded-3 mb-4">
-                        <a href="#">
-                            <div class="fw-bold">API이름</div>
-                            <div>API내용</div>
-                            <div>카테고리</div>
-                        </a>
-                    </div>
-                    <div class="col-3 mx-auto border rounded-3 mb-4">
+                    <div class="col-3 rounded-3 mb-4 shadow p-3">
                         <a href="#">
                             <div class="fw-bold">API이름</div>
                             <div>API내용</div>
@@ -76,22 +76,22 @@
                         </a>
                     </div>
                 </div>
-                <div class="row mx-auto mb-4">
-                    <div class="col-3 mx-auto border rounded-3">
+                <div class="row mx-auto d-flex justify-content-between">
+                    <div class="col-3 rounded-3 mb-4 shadow p-3">
+                        <a href="#" class="">
+                            <div class="fw-bold">API이름</div>
+                            <div>API내용</div>
+                            <div>카테고리</div>
+                        </a>
+                    </div>
+                    <div class="col-3 rounded-3 mb-4 shadow p-3">
                         <a href="#">
                             <div class="fw-bold">API이름</div>
                             <div>API내용</div>
                             <div>카테고리</div>
                         </a>
                     </div>
-                    <div class="col-3 mx-auto border rounded-3">
-                        <a href="#">
-                            <div class="fw-bold">API이름</div>
-                            <div>API내용</div>
-                            <div>카테고리</div>
-                        </a>
-                    </div>
-                    <div class="col-3 mx-auto border rounded-3">
+                    <div class="col-3 rounded-3 mb-4 shadow p-3">
                         <a href="#">
                             <div class="fw-bold">API이름</div>
                             <div>API내용</div>
@@ -100,47 +100,60 @@
                     </div>
                 </div>
 
-                <h4>데이터셋 목록</h4>
-                <div class="row mx-auto">
-                    <div class="col-3 mx-auto border rounded-3 mb-4">
-                        <div class="fw-bold">데이터셋 이름</div>
-                        <div>데이터셋 내용</div>
-                        <div>카테고리</div>
+                <h4 class="mt-5 mb-4">데이터셋 목록</h4>
+                <div class="row mx-auto d-flex justify-content-between">
+                    <div class="col-3 rounded-3 mb-4 shadow p-3">
+                        <a href="#" class="">
+                            <div class="fw-bold">데이터셋 이름</div>
+                            <div>데이터셋 내용</div>
+                            <div>카테고리</div>
+                        </a>
                     </div>
-                    <div class="col-3 mx-auto border rounded-3 mb-4">
-                        <div class="fw-bold">데이터셋 이름</div>
-                        <div>데이터셋 내용</div>
-                        <div>카테고리</div>
+                    <div class="col-3 rounded-3 mb-4 shadow p-3">
+                        <a href="#" class="">
+                            <div class="fw-bold">데이터셋 이름</div>
+                            <div>데이터셋 내용</div>
+                            <div>카테고리</div>
+                        </a>
                     </div>
-                    <div class="col-3 mx-auto border rounded-3 mb-4">
-                        <div class="fw-bold">데이터셋 이름</div>
-                        <div>데이터셋 내용</div>
-                        <div>카테고리</div>
-                    </div>
-                </div>
-                <div class="row mx-auto">
-                    <div class="col-3 mx-auto border rounded-3">
-                        <div class="fw-bold">데이터셋 이름</div>
-                        <div>데이터셋 내용</div>
-                        <div>카테고리</div>
-                    </div>
-                    <div class="col-3 mx-auto border rounded-3">
-                        <div class="fw-bold">데이터셋 이름</div>
-                        <div>데이터셋 내용</div>
-                        <div>카테고리</div>
-                    </div>
-                    <div class="col-3 mx-auto border rounded-3">
-                        <div class="fw-bold">데이터셋 이름</div>
-                        <div>데이터셋 내용</div>
-                        <div>카테고리</div>
+                    <div class="col-3 rounded-3 mb-4 shadow p-3">
+                        <a href="#" class="">
+                            <div class="fw-bold">데이터셋 이름</div>
+                            <div>데이터셋 내용</div>
+                            <div>카테고리</div>
+                        </a>
                     </div>
                 </div>
-                <!--글씨 쓰기 필요없음 
+                <div class="row mx-auto d-flex justify-content-between">
+                    <div class="col-3 rounded-3 mb-4 shadow p-3">
+                        <a href="#" class="">
+                            <div class="fw-bold">데이터셋 이름</div>
+                            <div>데이터셋 내용</div>
+                            <div>카테고리</div>
+                        </a>
+                    </div>
+                    <div class="col-3 rounded-3 mb-4 shadow p-3">
+                        <a href="#" class="">
+                            <div class="fw-bold">데이터셋 이름</div>
+                            <div>데이터셋 내용</div>
+                            <div>카테고리</div>
+                        </a>
+                    </div>
+                    <div class="col-3 rounded-3 mb-4 shadow p-3">
+                        <a href="#" class="">
+                            <div class="fw-bold">데이터셋 이름</div>
+                            <div>데이터셋 내용</div>
+                            <div>카테고리</div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!--글씨 쓰기 필요없음 
                 api나 데이터셋 목록
                 그리드, 베너로
                 리스트형식으로 하지말기 -->
-            </div>
         </div>
+    </div>
     </div>
 </body>
 
