--- a/jsjs/test.html
+++ b/jsjs/test.html
@@ -8,8 +8,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
             crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
+            integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
+            crossorigin="anonymous"></script>
+
+
 </head>
-<body>
+<body class="bg-light">
 <button type="button" class="btn btn-primary" id="liveToastBtn">Show live toast</button>
 
 <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 5">
@@ -25,5 +34,15 @@
         </div>
     </div>
 </div>
+
+<script>
+    const toastEl = document.getElementById('liveToast');
+    const bootStrapToast = new bootstrap.Toast(toastEl);
+    const btnLiveToast = document.getElementById('liveToastBtn');
+    btnLiveToast.addEventListener('click', () => {
+        bootStrapToast.show();
+    });
+</script>
+
 </body>
 </html>
