--- a/BU/dataset/request/action.html
+++ b/BU/dataset/request/action.html
@@ -34,9 +34,9 @@
 
 <body>
     <div th:replace="fragments/header.html :: fragment-header"></div>
-    <div class="container mx-auto">
+    <div class="container">
         <div class="row">
-            <div class="col-10">
+            <div class="col-10 mx-auto">
                 <span>
                     <h2>요청하기</h2>
                 </span>
