--- a/jsjs/user/mypage.html
+++ b/jsjs/user/mypage.html
@@ -141,11 +141,19 @@
                             </div>
                         </div>
 
-                    </div>
-                </div>
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <div class="row mb-3">
+                        <div class="row mt-3">
+                            <div class="col-sm-4 align-self-center">
+                                <h6 class="mb-2">소개</h6>
+                            </div>
+                            <div class="col-sm-8 text-secondary">
+                                <div class="input-group">
+                                    <span class="input-group-text"><i class="fas fa-pen"></i></span>
+                                    <input type="text" class="form-control" placeholder="스치면 인연... 스며들면 스폰지밥...">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row mb-3 mt-3">
                             <div class="col-sm-4 align-self-center">
                                 <h6 class="mb-2">비밀번호변경</h6>
                             </div>
@@ -173,13 +181,13 @@
                             </div>
                         </div>
 
+                        <div class="d-grid gap-2 mt-3">
+                            <button class="btn btn-primary" type="button">수정</button>
+                        </div>
+
                     </div>
                 </div>
-                <div class="card mt-3 mb-3">
-                    <div class="d-grid gap-2 p-2">
-                        <button class="btn btn-primary" type="button">수정</button>
-                    </div>
-                </div>
+
             </div>
         </div>
     </div>
