fix: 오류 문의 - UI 하단 추가 수정

--- a/BU/Error.html
+++ b/BU/Error.html
@@ -69,14 +69,14 @@
                 </div>
                 <div class="row mb-3">
                     <h5>파일첨부</h5>
-                    <div class="col-12 col-lg-5">
+                    <div class="col-12">
                         <form action="" method="post" enctype="multipart/form-data">
                             <input type="file" class="form-control">
                         </form>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-9 col-sm-12 d-flex justify-content-end">
+                    <div class="d-flex justify-content-end">
                         <button type="button" class="btn btn-outline-secondary me-2">등록하기</button>
                         <button type="button" class="btn btn-outline-secondary">취소하기</button>
                     </div>
