--- a/BU/dataset/request/list.html
+++ b/BU/dataset/request/list.html
@@ -18,17 +18,9 @@
     <!--    font awesome-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-
     <style>
-        ol, ul, dl, li {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        a, a:link, a:visited {
-            text-decoration: none;
-            color: inherit;
+        table, thead, td {
+            white-space: nowrap;
         }
     </style>
 
@@ -36,53 +28,54 @@
 
 <body>
 <div th:replace="fragments/header.html :: fragment-header"></div>
-<div class="container mx-auto">
+<div class="container">
     <div class="row">
-        <div class="col-10 mx-auto">
+        <div class="col-12 col-lg-10 mx-auto">
             <h2>데이터 요청</h2><br>
-            <div class="col-12">
-                <div class="search mb-5 d-flex justify-content-end">
-                    <input type="text" id="keyword" class="form-control w-25 me-2" title="검색어를 입력해주세요" placeholder="검색어를 입력해주세요"
-                           autocomplete="off">
-                    <a href="#" class="fas fa-search fa-2x text-primary align-self-center"></a>
+            <div>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="검색어입력" aria-label="Username"
+                           aria-describedby="basic-addon1">
+                    <button type="button" class="btn btn-primary"><i class="fas fa-search"></i></button>
                 </div>
+            </div>
 
-                <div class="d-flex justify-content-between">
-                    <h5 class="align-self-center mb-0">전체 1건</h5>
-                    <div class="list_right">
-                        <button type="button" class="btn btn-secondary">등록일 순</button>
-                        <button type="button" class="btn btn-secondary">조회수 순</button>
+            <div class="d-flex justify-content-between">
+                <h5 class="align-self-center mb-0">전체 1건</h5>
+                <div class="list_right">
+                    <button type="button" class="btn btn-secondary">등록일 순</button>
+                    <button type="button" class="btn btn-secondary">조회수 순</button>
 
-                    </div>
                 </div>
-                <br><br>
-                <div class="col-12 d-flex">
-                    <table class="table table-hover">
-                        <thead>
-                        <tr>
-                            <th>번호</th>
-                            <th>제목</th>
-                            <th>작성자</th>
-                            <th>날짜</th>
-                            <th>조회수</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>지섭지섭</td>
-                            <td>김지섭</td>
-                            <td>2021.03.26</td>
-                            <td>1</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-                 <div class="d-flex justify-content-end">
-                         <button type="button" class="btn btn-secondary" onclick="location.href='action.html'">요청하기</button>
-                    </div>
+            </div>
+
+            <div class="table-responsive">
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th>번호</th>
+                        <th>제목</th>
+                        <th>작성자</th>
+                        <th>날짜</th>
+                        <th>조회수</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>지섭지섭</td>
+                        <td>김지섭</td>
+                        <td>2021.03.26</td>
+                        <td>1</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="d-flex justify-content-end">
+                <button type="button" class="btn btn-secondary" onclick="location.href='action.html'">요청하기</button>
             </div>
         </div>
+
     </div>
 </div>
 </body>
