--- a/BU/dataset/request/list.html
+++ b/BU/dataset/request/list.html
@@ -63,9 +63,9 @@
                     <tbody>
                     <tr>
                         <td>1</td>
-                        <td>지섭지섭</td>
-                        <td>김지섭</td>
-                        <td>2021.03.26</td>
+                        <td>test</td>
+                        <td>testuser</td>
+                        <td>2021-05-18</td>
                         <td>1</td>
                     </tr>
                     </tbody>
