--- a/BU/datahub/datahub_list_login(2).html
+++ b/BU/datahub/datahub_list_login(2).html
@@ -59,7 +59,70 @@
                     </div>
                 </div>
                 <div class="row mb-5">
-                    <div class="col-lg-12">
+                    <div class="col-lg-8 pe-5">
+                        <span>
+                            <h3 class="mb-4">내 허브</h3>
+                        </span>
+                        <div class="d-flex">
+                            <div class="d-flex me-5">
+                                <ul class="">
+                                    <li class="mb-5">
+                                        <a href="#" class="d-flex">
+                                            <div>
+                                                <img src="../image/1.PNG" alt="" class="me-3 img-thumbnail"
+                                                    style="width: 150px; height: 150px;">
+                                            </div>
+                                            <div>
+                                                <strong>데이터 허브1</strong>
+                                                <p>데이터 허브</p>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="d-flex">
+                                            <div>
+                                                <img src="../image/2.PNG" alt="" class="me-3 img-thumbnail"
+                                                    style="width: 150px; height: 150px;">
+                                            </div>
+                                            <div>
+                                                <strong>데이터 허브1</strong>
+                                                <p>데이터 허브</p>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="d-flex ms-5">
+                                <ul class="">
+                                    <li class="mb-5">
+                                        <a href="#" class="d-flex">
+                                            <div>
+                                                <img src="../image/3.PNG" alt="" class="me-3 img-thumbnail"
+                                                    style="width: 150px; height: 150px;">
+                                            </div>
+                                            <div>
+                                                <strong>데이터 허브1</strong>
+                                                <p>데이터 허브</p>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="d-flex">
+                                            <div>
+                                                <img src="../image/4.PNG" alt="" class="me-3 img-thumbnail"
+                                                    style="width: 150px; height: 150px;">
+                                            </div>
+                                            <div>
+                                                <strong>데이터 허브1</strong>
+                                                <p>데이터 허브</p>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
                         <span>
                             <h3>ISSUE</h3>
                         </span>
@@ -75,26 +138,23 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="d-flex">
-                                        <img src="../image/1.PNG" class="d-block w-100" alt="...">
-                                        <img src="../image/2.PNG" class="d-block w-100 ms-3" alt="...">
-                                        <img src="../image/3.PNG" class="d-block w-100 ms-3" alt="...">
-                                        <img src="../image/4.PNG" class="d-block w-100 ms-3" alt="...">
-                                    </div>
-                                </div>
-                                <div class="carousel-item">
-                                    <div class="d-flex">
                                         <img src="../image/5.PNG" class="d-block w-100" alt="...">
-                                        <img src="../image/6.PNG" class="d-block w-100 ms-3" alt="...">
-                                        <img src="../image/2.PNG" class="d-block w-100 ms-3" alt="...">
-                                        <img src="../image/1.PNG" class="d-block w-100 ms-3" alt="...">
+                                        <!-- <img src="image/1.PNG" class="d-block w-100 mx-3" alt="...">
+                                        <img src="image/1.PNG" class="d-block w-100" alt="..."> -->
                                     </div>
                                 </div>
                                 <div class="carousel-item">
                                     <div class="d-flex">
-                                        <img src="../image/4.PNG" class="d-block w-100" alt="...">
-                                        <img src="../image/5.PNG" class="d-block w-100 ms-3" alt="...">
-                                        <img src="../image/6.PNG" class="d-block w-100 ms-3" alt="...">
-                                        <img src="../image/1.PNG" class="d-block w-100 ms-3" alt="...">
+                                        <img src="../image/6.PNG" class="d-block w-100" alt="...">
+                                        <!-- <img src="image/2.PNG" class="d-block w-100 mx-3" alt="...">
+                                        <img src="image/2.PNG" class="d-block w-100" alt="..."> -->
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div class="d-flex">
+                                        <img src="../image/3.PNG" class="d-block w-100" alt="...">
+                                        <!-- <img src="image/3.PNG" class="d-block w-100 mx-3" alt="...">
+                                        <img src="image/3.PNG" class="d-block w-100" alt="..."> -->
                                     </div>
                                 </div>
                             </div>
