fix: 데이터 허브 상세 조회 페이지 수정

--- a/hyeonjeong/datahub/view.html
+++ b/hyeonjeong/datahub/view.html
@@ -51,24 +51,24 @@
             <div class="col-10 mx-auto">
                 <!-- datahub-view-page-big-title -->
                 <h2 class="mb-3">데이터 허브 상세 조회</h2>
-
-                <h4 class="mb-3">API 목록</h4>
+                <h5></h5>
+                <h4 class="mb-3">관련 API 목록</h4>
                 <div class="row mx-auto d-flex justify-content-between">
-                    <div class="col-3 rounded-3 mb-4 shadow p-3">
+                    <div class="col-3 rounded-3 mb-4 shadow p-3 border">
                         <a href="#" class="">
                             <div class="fw-bold">API이름</div>
                             <div>API내용</div>
                             <div>카테고리</div>
                         </a>
                     </div>
-                    <div class="col-3 rounded-3 mb-4 shadow p-3">
+                    <div class="col-3 rounded-3 mb-4 shadow p-3 border">
                         <a href="#">
                             <div class="fw-bold">API이름</div>
                             <div>API내용</div>
                             <div>카테고리</div>
                         </a>
                     </div>
-                    <div class="col-3 rounded-3 mb-4 shadow p-3">
+                    <div class="col-3 rounded-3 mb-4 shadow p-3 border">
                         <a href="#">
                             <div class="fw-bold">API이름</div>
                             <div>API내용</div>
@@ -100,9 +100,9 @@
                     </div>
                 </div>
 
-                <h4 class="mt-5 mb-4">데이터셋 목록</h4>
+                <h4 class="mt-5 mb-4">관련 데이터셋 목록</h4>
                 <div class="row mx-auto d-flex justify-content-between">
-                    <div class="col-3 rounded-3 mb-4 shadow p-3">
+                    <div class="col-3 rounded-3 mb-4 shadow p-3 border">
                         <a href="#" class="">
                             <div class="fw-bold">데이터셋 이름</div>
                             <div>데이터셋 내용</div>
@@ -150,8 +150,10 @@
             </div>
             <!--글씨 쓰기 필요없음 
                 api나 데이터셋 목록
-                그리드, 베너로
-                리스트형식으로 하지말기 -->
+                그리드, 배너로
+                리스트형식으로 하지말기
+                데이터 허브를 누가 등록? 사용자? 관리자?
+            데이터 허브 메인에서 마음에 드는 데이터 허브 하나를 클릭했을 때 그 데이터 허브 관련된 API나 데이터셋을 보여주는 페이지-->
         </div>
     </div>
     </div>
