--- a/jsjs/visualization/api_visualization.html
+++ b/jsjs/visualization/api_visualization.html
@@ -95,27 +95,86 @@
                         <div class="col-4">
                             <canvas id="myChart03"></canvas>
                             <script>
-                                mixed_chart(
+                                //https://www.chartjs.org/docs/latest/samples/line/stepped.html
+                                const data = {
+                                    labels: ['Day 1', 'Day 2', 'Day 3', 'Day 4', 'Day 5', 'Day 6'],
+                                    datasets: [
+                                        {
+                                            label: 'Dataset',
+                                            data: Utils.numbers({count: 6, min: -100, max: 100}),
+                                            borderColor: Utils.CHART_COLORS.red,
+                                            fill: false,
+                                            stepped: true,
+                                        }
+                                    ]
+                                };
+                                const config = {
+                                    type: 'line',
+                                    data: data,
+                                    options: {
+                                        responsive: true,
+                                        interaction: {
+                                            intersect: false,
+                                            axis: 'x'
+                                        },
+                                        plugins: {
+                                            title: {
+                                                display: true,
+                                                text: (ctx) => 'Step ' + ctx.chart.data.datasets[0].stepped + ' Interpolation',
+                                            }
+                                        }
+                                    }
+                                };
+                                const actions = [
+                                    {
+                                        name: 'Step: false (default)',
+                                        handler: (chart) => {
+                                            chart.data.datasets.forEach(dataset => {
+                                                dataset.stepped = false;
+                                            });
+                                            chart.update();
+                                        }
+                                    },
+                                    {
+                                        name: 'Step: true',
+                                        handler: (chart) => {
+                                            chart.data.datasets.forEach(dataset => {
+                                                dataset.stepped = true;
+                                            });
+                                            chart.update();
+                                        }
+                                    },
+                                    {
+                                        name: 'Step: before',
+                                        handler: (chart) => {
+                                            chart.data.datasets.forEach(dataset => {
+                                                dataset.stepped = 'before';
+                                            });
+                                            chart.update();
+                                        }
+                                    },
+                                    {
+                                        name: 'Step: after',
+                                        handler: (chart) => {
+                                            chart.data.datasets.forEach(dataset => {
+                                                dataset.stepped = 'after';
+                                            });
+                                            chart.update();
+                                        }
+                                    },
+                                    {
+                                        name: 'Step: middle',
+                                        handler: (chart) => {
+                                            chart.data.datasets.forEach(dataset => {
+                                                dataset.stepped = 'middle';
+                                            });
+                                            chart.update();
+                                        }
+                                    }
+                                ];
+                                const myChart = new Chart(
                                     document.getElementById("myChart03"),
-                                    [
-                                        'January',
-                                        'February',
-                                        'March',
-                                        'April'
-                                    ],
-                                    [{
-                                        type: 'bar',
-                                        label: 'Bar Dataset',
-                                        data: [10, 20, 30, 40],
-                                        borderColor: 'rgb(255, 99, 132)',
-                                        backgroundColor: 'rgba(255, 99, 132, 0.2)'
-                                    }, {
-                                        type: 'line',
-                                        label: 'Line Dataset',
-                                        data: [50, 50, 50, 50],
-                                        fill: false,
-                                        borderColor: 'rgb(54, 162, 235)'
-                                    }]
+                                    config
                                 );
                             </script>
                         </div>
