--- a/jsjs/visualization/api_visualization.html
+++ b/jsjs/visualization/api_visualization.html
@@ -96,86 +96,20 @@
                             <canvas id="myChart03"></canvas>
                             <script>
                                 //https://www.chartjs.org/docs/latest/samples/line/stepped.html
-                                const data = {
-                                    labels: ['Day 1', 'Day 2', 'Day 3', 'Day 4', 'Day 5', 'Day 6'],
-                                    datasets: [
+                                stepped_line(
+                                    document.getElementById("myChart03"),
+                                    ['Day 1', 'Day 2', 'Day 3', 'Day 4', 'Day 5', 'Day 6'],
+                                    [
                                         {
                                             label: 'Dataset',
-                                            data: Utils.numbers({count: 6, min: -100, max: 100}),
-                                            borderColor: Utils.CHART_COLORS.red,
+                                            data: [1, 2, 3, 4, 5, 6],
+                                            borderColor: 'rgb(255, 99, 132)',
                                             fill: false,
                                             stepped: true,
                                         }
                                     ]
-                                };
-                                const config = {
-                                    type: 'line',
-                                    data: data,
-                                    options: {
-                                        responsive: true,
-                                        interaction: {
-                                            intersect: false,
-                                            axis: 'x'
-                                        },
-                                        plugins: {
-                                            title: {
-                                                display: true,
-                                                text: (ctx) => 'Step ' + ctx.chart.data.datasets[0].stepped + ' Interpolation',
-                                            }
-                                        }
-                                    }
-                                };
-                                const actions = [
-                                    {
-                                        name: 'Step: false (default)',
-                                        handler: (chart) => {
-                                            chart.data.datasets.forEach(dataset => {
-                                                dataset.stepped = false;
-                                            });
-                                            chart.update();
-                                        }
-                                    },
-                                    {
-                                        name: 'Step: true',
-                                        handler: (chart) => {
-                                            chart.data.datasets.forEach(dataset => {
-                                                dataset.stepped = true;
-                                            });
-                                            chart.update();
-                                        }
-                                    },
-                                    {
-                                        name: 'Step: before',
-                                        handler: (chart) => {
-                                            chart.data.datasets.forEach(dataset => {
-                                                dataset.stepped = 'before';
-                                            });
-                                            chart.update();
-                                        }
-                                    },
-                                    {
-                                        name: 'Step: after',
-                                        handler: (chart) => {
-                                            chart.data.datasets.forEach(dataset => {
-                                                dataset.stepped = 'after';
-                                            });
-                                            chart.update();
-                                        }
-                                    },
-                                    {
-                                        name: 'Step: middle',
-                                        handler: (chart) => {
-                                            chart.data.datasets.forEach(dataset => {
-                                                dataset.stepped = 'middle';
-                                            });
-                                            chart.update();
-                                        }
-                                    }
-                                ];
-                                const myChart = new Chart(
-                                    document.getElementById("myChart03"),
-                                    config
-                                );
+                                )
+
                             </script>
                         </div>
 
